@@ -3,24 +3,25 @@ This registry is modify-able through datapacks.
 judgement
 rot_phys
 frost_crown
-eye_of_zegrath
 divine_might
-water_ele_sword
 inner_conflux
 jester_hat
-obsi_might
-greed_persist
 loop_of_infinity
-gluttony_helmet
-angel_prot_necklace
 exec_pride
 fifth_rider
 will_of_flora
+birth_miracle
+harbinger
+inca_thunder
+eye_of_zegrath
+water_ele_sword
+crystal_wand
+obsi_might
+greed_persist
+gluttony_helmet
+angel_prot_necklace
 ms_armor_chest
 skull_of_spirits
 beast_blood
-birth_miracle
 crown_of_elements
 snake_eye
-harbinger
-inca_thunder
